maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:30: error: reassignment to val
    setDirection=Direction.EAST
                ^PledgeMaze:46: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:46: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:53: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:53: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^